packages/parser/test/parser/E0110.txt
a := test ? a :
===== err =====
anonymous:1:16: ParseError: E0110 - Expected conditional expression alternate after colon
1 | a := test ? a :
  |                ^
